--- a/Comparison Feature Selection.ipynb
+++ b/Comparison Feature Selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8ba55b52-9013-4fd2-b172-eda1167469f6",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d3a6f047-0d44-4fc2-837f-79075c31905c",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "094acfd6-99f5-46b2-ac4d-154ac22db5aa",
    "metadata": {},
    "outputs": [],
@@ -157,8 +157,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f2093c41-d929-47c0-8d93-7cfb4dd7928e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_selection import SelectKBest\n",
+    "from sklearn.feature_selection import f_classif\n",
+    "\n",
+    "filter = SelectKBest(f_classif, k=1000).fit(X, y)\n",
+    "filter.get_feature_names_out()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "46421257-59b7-4c4a-8fed-a302d4a0966f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2b9e915b-6113-41fa-a99a-3857162914fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Índices: [1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Array principal\n",
+    "array_principal = [\"maçã\", \"banana\", \"laranja\", \"uva\", \"pera\"]\n",
+    "\n",
+    "# Subconjunto de strings\n",
+    "subconjunto = [\"banana\", \"uva\"]\n",
+    "\n",
+    "# Obtendo os índices dos elementos do subconjunto no array principal\n",
+    "indices = [array_principal.index(item) for item in subconjunto]\n",
+    "\n",
+    "print(\"Índices:\", indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6b35036-0928-45ff-a7ed-528a407563b4",
    "metadata": {},
    "outputs": [],
    "source": []
