--- a/NSGAII_v2.ipynb
+++ b/NSGAII_v2.ipynb
@@ -1907,10 +1907,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d15d2d0f-c7fb-4305-bb3f-eff4b4b634f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plotComparisonConvergence' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mplotComparisonConvergence\u001b[49m(result_stock, result_modified)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'plotComparisonConvergence' is not defined"
+     ]
+    }
+   ],
    "source": [
     "plotComparisonConvergence(result_stock, result_modified)"
    ]
