--- a/Evaluation.ipynb
+++ b/Evaluation.ipynb
@@ -54,7 +54,9 @@
     "\n",
     "\"\"\" Funções e Variaveis Auxiliares\"\"\"\n",
     "from Constantes import *\n",
-    "from PlotingFunctions import *"
+    "from PlotingFunctions import *\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
@@ -78,28 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "af9e9ee5-9c24-46a9-b5a3-3645611cd338",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.9163295428907139]\n",
-      "[0.9163295428907139, 0.9203309337173351]\n",
-      "[0.9163295428907139, 0.9203309337173351, 0.9164847644252457]\n",
-      "[0.9163295428907139, 0.9203309337173351, 0.9164847644252457, 0.9132493985539035]\n",
-      "[0.9163295428907139, 0.9203309337173351, 0.9164847644252457, 0.9132493985539035, 0.9130957256242294]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(0.916, 8)"
+       "(0.867, 8)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,9 +100,9 @@
     "selected_features = [ 1609,  2369,  9077, 21976, 22587, 23786, 32599, 34806]\n",
     "features = np.full(len(X.columns),False)\n",
     "features[selected_features] = True\n",
-    "X_selected = np.array(X)[:,features]\n",
+    "X_selected = np.array(X)\n",
     "f_1 = []\n",
-    "n_tests = 5\n",
+    "n_tests = 1\n",
     "seed = 48\n",
     "for i in range(n_tests):\n",
     "    seed = seed + 1\n",
@@ -120,11 +111,10 @@
     "    #X_train, X_valid, y_train, y_valid = train_test_split(X_selected, self.y, test_size=0.1, random_state=100)\n",
     "        \t\n",
     "    # treino usando modelo SVM\n",
-    "    clf = svm.SVC(kernel='linear')\n",
+    "    clf = RandomForestClassifier()\n",
     "    \n",
     "    # compute f_1 and AUC on validation set\n",
     "    f_1.append(np.mean(cross_val_score(clf, X_selected, y, cv=skf, scoring='f1_macro')))\n",
-    "    print(f_1)\n",
     "        \n",
     "f_1 = round(np.array(f_1).sum()/n_tests, 3)\n",
     "n_features = len(selected_features)\n",
@@ -133,28 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "03370a7a-afd8-4303-8c36-dbd13f48a878",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 28,
-   "id": "403e2a91-3df4-46c3-b776-5a503ada242c",
+   "id": "03370a7a-afd8-4303-8c36-dbd13f48a878",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-5 {color: black;}#sk-container-id-5 pre{padding: 0;}#sk-container-id-5 div.sk-toggleable {background-color: white;}#sk-container-id-5 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-5 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-5 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-5 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-5 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-5 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-5 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-5 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-5 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-5 div.sk-item {position: relative;z-index: 1;}#sk-container-id-5 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-5 div.sk-item::before, #sk-container-id-5 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-5 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-5 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-5 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-5 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-5 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-5 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-5 div.sk-label-container {text-align: center;}#sk-container-id-5 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-5 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(n_estimators=1000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(n_estimators=1000)</pre></div></div></div></div></div>"
+      ],
       "text/plain": [
-       "array([[-0.8408758 , -1.46618236, -0.29409045, -0.43293945, -0.72800602],\n",
-       "       [ 1.08865853, -2.08661464,  0.3186621 , -0.25972484, -0.71153977],\n",
-       "       [-0.37599821, -1.31381773,  0.1163816 ,  0.06343332, -0.81457972],\n",
-       "       ...,\n",
-       "       [-1.2523575 ,  0.46541229,  0.9711231 , -0.12686781, -0.60701292],\n",
-       "       [-0.19732212,  0.11519462,  0.68164375,  1.35806637,  0.57926832],\n",
-       "       [-0.17834283,  0.71194359, -0.55233405,  0.62100625,  0.63741638]])"
+       "RandomForestClassifier(n_estimators=1000)"
       ]
      },
      "execution_count": 28,
@@ -163,34 +142,118 @@
     }
    ],
    "source": [
-    "np.array(X)[:,features]"
+    "clf = RandomForestClassifier(n_estimators=1000)\n",
+    "clf.fit(X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
+   "id": "7af61797-0bb9-426b-8cb4-859ed4180966",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00619391, 0.00479471, 0.00467563, 0.00407751, 0.00376029,\n",
+       "       0.00343695, 0.00341625, 0.00334563, 0.00327129, 0.0032149 ,\n",
+       "       0.00302657, 0.0029937 , 0.00295486, 0.00291486, 0.0028788 ,\n",
+       "       0.00287691, 0.00262031, 0.00260271, 0.00256654, 0.00256043,\n",
+       "       0.00255202, 0.00253911, 0.0024505 , 0.00244455, 0.00243452,\n",
+       "       0.00242414, 0.00241163, 0.00232047, 0.00231002, 0.00225614,\n",
+       "       0.00225379, 0.00222898, 0.00217847, 0.00216949, 0.00215268,\n",
+       "       0.00214575, 0.00210361, 0.0020993 , 0.00209246, 0.00209065,\n",
+       "       0.00207737, 0.0020213 , 0.0020123 , 0.00200868, 0.0019966 ,\n",
+       "       0.00198792, 0.00198072, 0.00197429, 0.00196805, 0.00196339,\n",
+       "       0.00196287, 0.00196089, 0.00193177, 0.00192972, 0.00192968,\n",
+       "       0.00192677, 0.00192273, 0.00189271, 0.00187325, 0.00187205,\n",
+       "       0.00184007, 0.00183913, 0.00182943, 0.00182185, 0.00181598,\n",
+       "       0.00179204, 0.00177221, 0.00175575, 0.00174777, 0.00173939,\n",
+       "       0.00173622, 0.00173595, 0.00173116, 0.00171612, 0.00170584,\n",
+       "       0.00169052, 0.00168704, 0.00166331, 0.00163349, 0.00158629,\n",
+       "       0.00158176, 0.00156529, 0.00155875, 0.00155364, 0.00155214,\n",
+       "       0.0015516 , 0.00154569, 0.00154473, 0.0015416 , 0.00153646,\n",
+       "       0.00153494, 0.00149953, 0.00149416, 0.00148827, 0.00148111,\n",
+       "       0.00147977, 0.00145786, 0.00145686, 0.00143877, 0.0014358 ])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(clf.feature_importances_)[::-1][:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "403e2a91-3df4-46c3-b776-5a503ada242c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['NM_144987', 'ENST00000322831', 'NM_001625', ..., 'NM_203422',\n",
+       "       'NM_006086', 'NM_006101'], dtype=object)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.feature_names_in_[np.argsort(clf.feature_importances_, kind = 'stable')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "66aeeb66-344c-4b33-8aca-e2e3e1f3ef1a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "35981"
+       "array([    0,     2,     3, ..., 25069,  9077, 10607])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(X.columns)"
+    "np.array(list(range(len(clf.feature_importances_))))[np.argsort(clf.feature_importances_, kind = 'stable')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "42b27171-860b-40c8-96f3-03fc53e08ac2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0061939146555902306"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.feature_importances_[10607]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42b27171-860b-40c8-96f3-03fc53e08ac2",
+   "id": "5a1d52bd-42e5-497e-b1f3-30465207446e",
    "metadata": {},
    "outputs": [],
    "source": []
